Reupped the latest Sql and build files

--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,7 @@
         <pathelement location="src/libraries/gson-2.2.4.jar"/>
         <pathelement location="src/libraries/commons-io-2.4.jar"/>
         <pathelement location="src/libraries/commons-lang3-3.1.jar"/>
+        <pathelement location="src/libraries/js.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
